# agdog

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.ps1
.github/workflows/: ci.yml  release.yml  windows-probe.yml
docs/: demo.tape
docs/design/: mockup.md
docs/superpowers/plans/: 2026-07-13-agdog.md
docs/superpowers/specs/: 2026-07-13-agdog-design.md
examples/: windows_probe.rs
src/: app.rs  attribute.rs  classify.rs  demo.rs  lib.rs  main.rs  model.rs  socket.rs  subagent.rs
src/collect/: gpu.rs  gpu_macos.rs  gpu_mock.rs  gpu_nvml.rs  gpu_windows.rs  mod.rs  system.rs
src/ui/: agents.rs  alerts.rs  cpu.rs  detail.rs  footer.rs  gpus.rs  mod.rs  summary.rs
tests/: attribution.rs  classify.rs  grouping.rs  render.rs  socket.rs  windows_platform.rs
