[package]
name = "agdog"
version = "0.1.5"
edition = "2024"
description = "Agent-aware terminal resource monitor: htop and nvitop fused, grouped by the agent that owns each process."
license = "MIT"
repository = "https://github.com/dynaum/agdog"
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# NVIDIA backend ships by default on Linux; it loads the driver at runtime and
# falls back to the mock when no device is present. Not pulled in on macOS.
[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.10"
